# chickensoup

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
Project Chicken Soup/: ContentView.swift  Item.swift  Project_Chicken_SoupApp.swift
Project Chicken Soup.xcodeproj/: project.pbxproj
Project Chicken Soup/Project Chicken Soup/: ContentView.swift  Project_Chicken_SoupApp.swift
Project Chicken Soup/Project Chicken Soup.xcodeproj/: project.pbxproj
Project Chicken Soup/Project Chicken SoupTests/: Project_Chicken_SoupTests.swift
Project Chicken Soup/Project Chicken SoupUITests/: Project_Chicken_SoupUITestsLaunchTests.swift
Project Chicken SoupTests/: Project_Chicken_SoupTests.swift
Project Chicken SoupUITests/: Project_Chicken_SoupUITests.swift
development-docs/: PROJECT_SPEC.md
src/: cache.py  config.py  discovery.py  main.py  models.py  multi_llm.py  observability.py  quantum_scheduler.py  scheduler.py  tasks.py
src/agents/: chat_ingest_agent.py  ingest_agent.py  navigation_agent.py  orchestrator.py  query_agent.py  research_agent.py
src/ai_navigator/: pennylane_qml.py
src/api/: auth.py
src/field_manipulator/: cuda_simulation.py
src/knowledge_graph/: connection.py  ingest.py  queries.py  schema.py
src/mcp/: tools.py
src/spacetime_engine/: qiskit_simulation.py  tensor.py
src/wiki/: backup.py  cleanup.py  writer.py
tests/: conftest.py  test_agents.py  test_api.py  test_audit_fixes.py  test_config.py  test_discovery.py  test_phase3.py  test_phase4.py  test_spacetime_engine.py
wiki/: index.md  log.md  overview.md
wiki/.obsidian/: graph.json  workspace.json
wiki/concepts/: 7-46-hz.md  agent-architecture.md  agent-skills.md  (+90 more)
(+134 files in other folders)
